# pm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  review.md  review1.md  tutorial.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: auth.py  board.py  chat.py  database.py  main.py  openrouter.py
backend/tests/: conftest.py  test_board.py  test_chat.py  test_database.py  test_main.py  test_openrouter.py
docs/: DATABASE.md  PLAN.md  database-schema.json
frontend/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: BoardSwitcher.test.tsx  BoardSwitcher.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx  RegisterForm.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
